fix: corrects the alignment of pet cards

--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -20,7 +20,6 @@ main{
         border-radius: 4px;
         min-width: 200px;
         height: 272px;
-        padding-bottom: 5px;
         /* border: 1px solid black; */
     }
 
@@ -30,6 +29,23 @@ main{
             object-fit: cover;
             background-color: var(--color-whtie-1);
         }
+
+        .card-pet > div{
+            width: 100%;
+            height: 112px;
+            padding: 0.5rem 0;
+            justify-content: space-between;
+        }
+            .card-pet > div > h3{
+                padding: 0 0.5rem;
+                text-align: center;
+                width: 100%;
+                white-space: nowrap; 
+                overflow: hidden; 
+                text-overflow: ellipsis; 
+            }
+
+     
         .CardTagAdoption{
             border: 1px solid var(--color-brand-1);
             background-color: var(--color-brand-1);
